add alerts page

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -67716,3 +67716,852 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     vertical-align: middle !important;
     white-space: nowrap !important;
 }
+@keyframes keyframe_127wuha {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(48px);
+    -ms-transform: translateY(48px);
+    transform: translateY(48px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+@keyframes keyframe_1l5ciok {
+  from {
+    opacity: 0.7;
+  }
+  to {
+    opacity: 0.8;
+  }
+}
+@keyframes keyframe_zba6ii {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, 30%, 0);
+  }
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+@keyframes keyframe_ey5qgs {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate(0, 2%);
+    -ms-transform: translate(0, 2%);
+    transform: translate(0, 2%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none;
+  }
+}
+@keyframes keyframe_1mcv7ov {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate(0, 10%);
+    -ms-transform: translate(0, 10%);
+    transform: translate(0, 10%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none;
+  }
+}
+@keyframes keyframe_190zdhl {
+  0% {
+    opacity: 0;
+    transform: translate(0, 25%);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+@keyframes keyframe_x3nd0a {
+  0% {
+    opacity: 0;
+    transform: none;
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+@keyframes keyframe_ga7xnj {
+  0% {
+    opacity: 0;
+    transform: translate(100%, 0);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+@keyframes keyframe_121ckm2 {
+  0% {
+    opacity: 1;
+    transform: none;
+  }
+  100% {
+    opacity: 0;
+    transform: none;
+  }
+}
+@keyframes keyframe_12p8qan {
+  0% {
+    opacity: 1;
+    transform: none;
+  }
+  100% {
+    opacity: 0;
+    transform: translate(100%, 0);
+  }
+}
+@keyframes keyframe_14ic1xm {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate(0, 40%);
+    -ms-transform: translate(0, 40%);
+    transform: translate(0, 40%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none;
+  }
+}
+@keyframes keyframe_923kpb {
+  0% {
+    transform: scale(calc((var(--vw-unitless) + 48) / var(--vw-unitless)), 1);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+@keyframes keyframe_1bvy19v {
+  0% {
+    transform: scale(calc((var(--vw-unitless) - 48) / var(--vw-unitless)), 1);
+    background: rgba(255, 255, 255, 0);
+  }
+  100% {
+    transform: scale(1, 1);
+    background: #fff;
+  }
+}
+@keyframes keyframe_y9cprv {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.97);
+    -ms-transform: scale(0.97);
+    transform: scale(0.97);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+  }
+}
+:root {
+  --h-l-f-om-o: 4px;
+  --go-h-jh-l: 8px;
+  --i-g-gvoq: 12px;
+  --g-ki-r-rq: 16px;
+  --j-mdfu-h: 20px;
+  --jx-b-v-zt: 0 8px 28px rgba(0, 0, 0, 0.28);
+  --g-r-n-ycy: 1px solid rgba(0, 0, 0, 0.04);
+  --ih-jiz-p: 0 6px 20px rgba(0, 0, 0, 0.2);
+  --cglwe-y: 1px solid rgba(0, 0, 0, 0.04);
+  --cizosd: 0 6px 16px rgba(0, 0, 0, 0.12);
+  --cb-k-zk-c: 1px solid rgba(0, 0, 0, 0.04);
+  --e-swdx-p: 0 2px 4px rgba(0, 0, 0, 0.18);
+  --g-fi-y-r-e: 1px solid rgba(0, 0, 0, 0.08);
+  --f-ya-ggj: cubic-bezier(1, 0, 0.86, 1);
+  --bd-d-m-c-q: cubic-bezier(0, 0, 0.1, 1);
+  ---bz-mmq: cubic-bezier(0.35, 0, 0.65, 1);
+  --bgxgx: #000000;
+  --f-k-smk-x: #222222;
+  --fo-jk-r-s: #717171;
+  --iw-ihca: #b0b0b0;
+  --j-qkgmf: #dddddd;
+  --d-nc-lt-s: #ebebeb;
+  ---pc-g-v-g: #f7f7f7;
+  --f-mkcy-f: #ffffff;
+  --k-va-tnc: #c13515;
+  --cnr-vp-o: #b32505;
+  --f-p-k-v-lb: #fff8f6;
+  --fhi-qn-u: #e07912;
+  --k-ff-my-a: #008a05;
+  --ldbkp-d: #428bff;
+  --ihf-tp-q: #ff385c;
+  --kd-lqtg: #92174d;
+  --d-u-w-o-m-k: #460479;
+  --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
+  --d-e-vybb: radial-gradient(
+    circle at center,
+    #ff385c 0%,
+    #e61e4d 27.5%,
+    #e31c5f 40%,
+    #d70466 57.5%,
+    #bd1e59 75%,
+    #bd1e59 100%
+  );
+  --gj-z-dpd: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
+  --i-n-t-h-mj: radial-gradient(
+    circle at center,
+    #d70466 0%,
+    #bd1e59 30%,
+    #92174d 55%,
+    #861453 72.5%,
+    #6c0d63 90%,
+    #6c0d63 100%
+  );
+  --iqds-nv: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
+  --j-m-v-dtd: radial-gradient(
+    circle at center,
+    #6c0d63 0%,
+    #59086e 30%,
+    #460479 55%,
+    #440589 72.5%,
+    #3b07bb 90%,
+    #3b07bb 100%
+  );
+  --jhzm-v-t: 16px;
+  --ikx-k-pe: 24px;
+  --kksqe-v: 32px;
+  --f-fw-z-a-i: 40px;
+  --cw-a-a-u-a: 48px;
+  --fvsvry: 64px;
+  --cy-o-aco: 80px;
+  --d-b-mrdy: 2px;
+  --h-x-sf-jw: 4px;
+  --fgg-f-l-a: 8px;
+  --b-y-unon: 12px;
+  --jaa-ni-h: 16px;
+  --ic-zlb-s: 24px;
+  --kc-t-qr-j: 32px;
+  --e-ls-qkw: 'Avenir', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+    'Helvetica Neue', sans-serif;
+  --fy-rs-ca: 18px;
+  --d-ar-t-o-n: 22px;
+  --lhy-d-yl: 22px;
+  --fme-bf-w: 26px;
+  --g-zgv-nj: 26px;
+  --b-x-z-q-l-e: 30px;
+  --cv-p-u-ui: 32px;
+  --hu-t-o-g-n: 36px;
+  --hr-k-udr: 10px;
+  --dpgw-ac: 12px;
+  --f-cv-j-j-p: 12px;
+  --f-l-h-bac: 16px;
+  --c-zdwk-p: 14px;
+  --j-p-z-kco: 18px;
+  --i-nh-zme: 14px;
+  --gvarj-f: 20px;
+  --iw-ehf-f: 16px;
+  ---s-l-myu: 20px;
+  --y-g-ar-y: 16px;
+  --cb-pewj: 24px;
+  --ll-l-ys-f: 18px;
+  --f-xgviq: 24px;
+  --kmwb-ss: 18px;
+  --j-n-c-d-l-h: 28px;
+  --e-y-j-d-v-j: 400;
+  --jx-zk-pv: 600;
+  --h-oqhch: 800;
+  --g-lm-u-p: normal;
+  --mq-yk-l: 0.04em;
+}
+@keyframes keyframe_gm-marker {
+  0% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+@keyframes keyframe_gm-marker-popover {
+  0% {
+    transform: translate(4px);
+  }
+  100% {
+    transform: translate(6px);
+  }
+}
+@keyframes keyframe_11ul38 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1);
+  }
+}
+@keyframes keyframe_p1skye {
+  0% {
+    transform: scale(0.75) translate3d(4px, -8px, 0);
+  }
+  100% {
+    transform: scale(1) translate3d(4px, -8px, 0);
+  }
+}
+.link {
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-weight: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  line-height: inherit !important;
+  color: #222 !important;
+  text-decoration: none !important;
+  outline: 0 !important;
+}
+.link::-moz-focus-inner {
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.link:focus::-moz-focus-inner {
+  border: none !important;
+}
+.link:-moz-focusring {
+  outline: 0 !important;
+}
+.link:focus-visible {
+  color: #222 !important;
+  border-radius: 4px !important;
+  -webkit-transition: box-shadow 0.2s !important;
+  -moz-transition: box-shadow 0.2s !important;
+  transition: box-shadow 0.2s !important;
+  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
+}
+@media (prefers-reduced-motion: reduce) {
+  .link:focus-visible {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    transition: none !important;
+  }
+}
+@media (hover: hover) {
+  .link:hover {
+    cursor: pointer !important;
+    color: #222 !important;
+    text-decoration: none !important;
+  }
+}
+.link:active,
+.link:focus {
+  color: #222 !important;
+  text-decoration: none !important;
+}
+.link:disabled {
+  color: #ddd !important;
+  text-decoration: none !important;
+}
+@keyframes keyframe_dot-loader {
+  0%,
+  100%,
+  80% {
+    opacity: 0;
+  }
+  30%,
+  50% {
+    opacity: 1;
+  }
+}
+@keyframes keyframe_1p3tni5 {
+  0% {
+    transform: translateY(60%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes keyframe_s5cldb {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes keyframe_ioak0t {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(60%);
+  }
+}
+@keyframes keyframe_aa5y1b {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes keyframe_1cuv66y {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@keyframes keyframe_1sh8tyy {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fadein-gmap-micro-marker-animation {
+  from {
+    opacity: 0;
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@keyframes fadein-gmap-micro-marker-animation {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@keyframes keyframe_p1skye {
+  0% {
+    transform: translate(4px);
+  }
+  100% {
+    transform: translate(6px);
+  }
+}
+@keyframes keyframe_pjd2m1 {
+  0% {
+    transform: translate(4px);
+  }
+  100% {
+    transform: translate(6px);
+  }
+}
+@keyframes keyframe_d37zz3 {
+  0% {
+    opacity: 0;
+    transform: translate(0, 100%);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+@keyframes keyframe_1hvlqe7 {
+  0% {
+    opacity: 1;
+    transform: none;
+  }
+  100% {
+    opacity: 0;
+    transform: translate(0, 100%);
+  }
+}
+@keyframes keyframe_15p0df {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.6;
+  }
+}
+@keyframes keyframe_bfv0xc {
+  0% {
+    opacity: 0;
+    transform: scale(0.05);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+@keyframes keyframe_nzi634 {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0.05);
+  }
+}
+@-webkit-keyframes fade-in-landscape-card-overline-show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fade-in-landscape-card-media-slider-control-show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@property --contentscroller_aspect-ratio {
+  inherits: true;
+  initial-value: unset;
+  syntax: '<length-percentage>';
+}
+@property --contentscroller_contain {
+  inherits: true;
+  initial-value: none;
+  syntax: '<string>';
+}
+@property --contentscroller_contain-intrinsic-size {
+  inherits: true;
+  initial-value: undefined;
+  syntax: '<length>+';
+}
+@property --contentscroller_min-height {
+  inherits: true;
+  initial-value: undefined;
+  syntax: '<length>';
+}
+@property --contentscroller_content-visibility {
+  inherits: true;
+  initial-value: undefined;
+  syntax: '<string>';
+}
+@property --contentscroller_gap {
+  inherits: true;
+  initial-value: 16px;
+  syntax: '<length-percentage>';
+}
+@property --contentscroller_overflow {
+  inherits: true;
+  initial-value: auto hidden;
+  syntax: 'undefined';
+}
+@property --contentscroller_peek {
+  inherits: true;
+  initial-value: 32px;
+  syntax: '<length-percentage>';
+}
+@property --contentscroller_scrollsnapalign {
+  inherits: true;
+  initial-value: start;
+  syntax: 'undefined';
+}
+@property --contentscroller_scrollsnapstop {
+  inherits: true;
+  initial-value: normal;
+  syntax: 'undefined';
+}
+@property --contentscroller_scrollsnaptype {
+  inherits: true;
+  initial-value: inline mandatory;
+  syntax: 'undefined';
+}
+@property --contentscroller_rows {
+  inherits: true;
+  initial-value: none;
+  syntax: 'undefined';
+}
+@property --contentscroller_touch-action {
+  inherits: true;
+  initial-value: pan-x pan-y pinch-zoom;
+  syntax: '<string>+';
+}
+@property --contentscroller_visible-items {
+  inherits: true;
+  initial-value: unset;
+  syntax: 'auto | <number>';
+}
+@property --contentscroller_controls_margin-block {
+  inherits: true;
+  initial-value: unset;
+  syntax: '<length-percentage>+';
+}
+@property --contentscroller_controls_margin-inline {
+  inherits: true;
+  initial-value: unset;
+  syntax: '<length-percentage>+';
+}
+@property --contentscroller_controls_grid-area {
+  inherits: true;
+  initial-value: header;
+  syntax: '<string>';
+}
+@property --contentscroller_controls_place-self {
+  inherits: true;
+  initial-value: auto end;
+  syntax: '<string>+';
+}
+@property --contentscroller_controls_pointer-events {
+  inherits: true;
+  initial-value: unset;
+  syntax: 'auto | none';
+}
+@property --contentscroller_controls_z-index {
+  inherits: true;
+  initial-value: auto;
+  syntax: 'auto | <number>';
+}
+@property --contentscroller_header_grid-area {
+  inherits: true;
+  initial-value: header;
+  syntax: '<string>';
+}
+@property --contentscroller_header_place-self {
+  inherits: true;
+  initial-value: auto;
+  syntax: '<string>+';
+}
+@property --contentscroller_scroller_grid-area {
+  inherits: true;
+  initial-value: scroller;
+  syntax: '<string>';
+}
+@property --contentscroller_scroller_place-self {
+  inherits: true;
+  initial-value: auto;
+  syntax: '<string>+';
+}
+@property --contentscroller_scroller_margin-block {
+  inherits: true;
+  initial-value: unset;
+  syntax: '<length-percentage>+';
+}
+@property --contentscroller_scroller_margin-inline {
+  inherits: true;
+  initial-value: unset;
+  syntax: '<length-percentage>+';
+}
+@property --contentscroller_layout_grid-template {
+  inherits: true;
+  initial-value: 'header' 'scroller' 'footer' / minmax(0, 1fr);
+  syntax: 'undefined';
+}
+@-webkit-keyframes fade-in-portrait-card-media-overlay-control-wrapper {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes zoomIn-portrait-card-slide-zoom {
+  from {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+  }
+  to {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+}
+@-webkit-keyframes fadeIn-portrait-tiny-card-image-content {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fade-in-portrait-card-media-overlay-control-wrapper {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes zoomIn-portrait-card-slide-zoom {
+  from {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+  }
+  to {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+}
+.flash-container .alert {
+  display: table;
+  padding: 15px 30px 15px 15px;
+  text-align: center;
+  position: relative;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  width: 100%;
+}
+.flash-container .alert .alert-close {
+  position: absolute;
+  line-height: initial;
+  right: 15px;
+  text-decoration: none;
+  top: 7px;
+}
+.flash-container .alert .alert-icon {
+  display: table-cell;
+  color: #007a87;
+  height: 100%;
+  vertical-align: middle;
+  -webkit-transform: scale(2.4) translateY(-0.4px);
+  -moz-transform: scale(2.4) translateY(-0.4px);
+  -ms-transform: scale(2.4) translateY(-0.4px);
+  -o-transform: scale(2.4) translateY(-0.4px);
+  transform: scale(2.4) translateY(-0.4px);
+}
+.flash-container .alert .alert-message {
+  display: table-cell;
+  padding-left: 20px;
+}
+.flash-container .alert {
+  background-color: #c2e4e7;
+}
+.flash-container .alert .alert-icon {
+  color: #4cb0bb;
+}
+.flash-container .alert .alert-close {
+  color: #007a87;
+}
+.flash-container .alert .alert-close:focus,
+.flash-container .alert .alert-close:hover {
+  color: #004c54;
+}
+.flash-container .alert-error {
+  background-color: #ffd1c4;
+}
+.flash-container .alert-error .alert-icon {
+  color: #e4a593;
+}
+.flash-container .alert-error .alert-close {
+  color: #b2725f;
+}
+.flash-container .alert-error .alert-close:focus,
+.flash-container .alert-error .alert-close:hover {
+  color: #965a48;
+}
+.flash-container .alert-close {
+  float: right;
+  cursor: pointer;
+  font-size: 2em;
+  line-height: 0.7;
+  vertical-align: middle;
+  font-style: normal;
+  font-weight: 400;
+  color: #bbb;
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+  margin: 0;
+}
+@media (min-width: 744px) {
+  .flash-container .alert .alert-message {
+    display: inline;
+    padding: 0;
+  }
+  .flash-container .alert .alert-icon {
+    margin-right: 20px;
+    display: inline-block;
+    vertical-align: baseline;
+  }
+}
+@keyframes keyframe_yti3uf {
+  0% {
+    opacity: 0;
+    transform: translateX(5px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes keyframe_1b8bzh6 {
+  0% {
+    opacity: 0;
+    animation-timing-function: ease-out;
+  }
+  100% {
+    opacity: 1;
+    animation-timing-function: ease-out;
+  }
+}
+@keyframes keyframe_1y07465 {
+  from {
+    opacity: 0.09049773755656108;
+  }
+  to {
+    opacity: 0.15384615384615385;
+  }
+}
+@keyframes keyframe_ita8t6 {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes keyframe_896wii {
+  0% {
+    transform: scaleX(0);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
+@keyframes keyframe_18jn58a {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes keyframe_1cjd84a {
+  0%,
+  100%,
+  80% {
+    opacity: 0;
+  }
+  30%,
+  50% {
+    opacity: 1;
+  }
+}
