--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -68569,3 +68569,35 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   background: var(--gray-900);
   transform: translateX(-50%);
 }
+._7ytvj78 {
+  background-color: rgb(255, 255, 255) !important;
+  border-width: 8px 1px 1px !important;
+  border-style: solid !important;
+  border-color: rgb(193, 53, 21) rgb(221, 221, 221) rgb(221, 221, 221) !important;
+  border-image: initial !important;
+  border-radius: 8px !important;
+  bottom: 16px !important;
+  box-shadow: rgb(0 0 0 / 20%) 0px 6px 20px !important;
+  display: flex !important;
+  left: 16px !important;
+  min-height: 100px !important;
+  padding: 12px 16px 20px !important;
+  right: 16px !important;
+  z-index: 2001 !important;
+  position: static !important;
+  margin: 16px 0px !important;
+}
+@media (min-width: 744px) {
+  ._7ytvj78 {
+    box-shadow: rgb(0 0 0 / 18%) 0px 2px 4px !important;
+    position: static !important;
+    margin: 16px 0px !important;
+  }
+}
+._dn1bj5 {
+  flex: 1 1 auto !important;
+}
+._1lkho1 {
+  flex: 0 0 auto !important;
+  margin-right: 8px !important;
+}
