fix pages css errors

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -59837,12 +59837,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   padding-right: 12px !important;
 }
 ._uy08umt:before {
-  content: !important;
+  content: '' !important;
   display: table !important;
 }
 ._uy08umt:after {
   clear: both !important;
-  content: !important;
+  content: '' !important;
   display: table !important;
 }
 @media (min-width: 744px) {
@@ -62826,10 +62826,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1440px), @supports (--custom: properties) {
+@media (min-width: 1440px) { @supports (--custom: properties) {
   ._1aolh5ll {
     flex: 0 0 var(--orbital-panel-width-xl) !important;
-  }
+  } }
 }
 
 ._15pihn5q {
@@ -63293,10 +63293,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1440px), @supports (--custom: properties) {
+@media (min-width: 1440px) { @supports (--custom: properties) {
   ._r61jg4l {
     flex: 1 1 0% !important;
-  }
+  } }
 }
 
 ._bnkeqa {
@@ -63468,10 +63468,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1440px), @supports (--custom: properties) {
+@media (min-width: 1440px) { @supports (--custom: properties) {
   ._1mz2k89o {
     flex: 0 0 var(--orbital-panel-width-xl) !important;
-  }
+  } }
 }
 
 ._1iegt8e {
@@ -63570,7 +63570,6 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   outline: none !important;
   transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s,
     -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
-  background: !important;
   border-color: rgb(34, 34, 34) !important;
   border-width: 2px !important;
 }
@@ -64124,10 +64123,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 744px), @supports (--custom: properties) {
+@media (min-width: 744px) { @supports (--custom: properties) {
   ._1fdiyhjh {
     flex: 0 0 var(--orbital-panel-width-md) !important;
-  }
+  } }
 }
 
 ._wdec1jj {
@@ -64183,10 +64182,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 744px), @supports (--custom: properties) {
+@media (min-width: 744px) { @supports (--custom: properties) {
   ._wdec1jj {
     flex: 1 1 0% !important;
-  }
+  } }
 }
 
 ._50rkbdl {
@@ -64242,10 +64241,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 744px) @supports (--custom: properties) {
+@media (min-width: 744px) { @supports (--custom: properties) {
   ._50rkbdl {
     flex: 0 0 var(--orbital-panel-width-md) !important;
-  }
+  } }
 }
 
 ._1ab1ddqs {
@@ -64862,10 +64861,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 744px), @supports (--custom: properties) {
+@media (min-width: 744px) { @supports (--custom: properties) {
   ._x6sr1rm {
     flex: 0 1 0% !important;
-  }
+  } }
 }
 
 ._ijm3lbp {
@@ -64954,10 +64953,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 375px), @supports (--custom: properties) {
+@media (min-width: 375px) { @supports (--custom: properties) {
   ._1xxu4mif {
     flex: 1 1 0% !important;
-  }
+  } }
 }
 
 ._2x3iol {
@@ -65141,10 +65140,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 375px), @supports (--custom: properties) {
+@media (min-width: 375px) { @supports (--custom: properties) {
   ._pm6ka6k {
     flex: 0 1 0% !important;
-  }
+  } }
 }
 
 ._1pusc02v {
@@ -66053,10 +66052,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1128px), @supports (--custom: properties) {
+@media (min-width: 1128px) { @supports (--custom: properties) {
   ._kapps0l {
     flex: 0 0 var(--orbital-panel-width-lg) !important;
-  }
+  } }
 }
 
 ._1y2ftwql {
@@ -66130,10 +66129,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1128px), @supports (--custom: properties) {
+@media (min-width: 1128px) { @supports (--custom: properties) {
   ._1y2ftwql {
     flex: 1 1 0% !important;
-  }
+  } }
 }
 
 ._ekd2cho {
@@ -66207,10 +66206,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1128px), @supports (--custom: properties) {
+@media (min-width: 1128px) { @supports (--custom: properties) {
   ._ekd2cho {
     flex: 0 0 var(--orbital-panel-width-lg) !important;
-  }
+  } }
 }
 
 ._1fls1kdh {
@@ -66349,10 +66348,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1440px), @supports (--custom: properties) {
+@media (min-width: 1440px) { @supports (--custom: properties) {
   ._o8ljzwp {
     flex: 0 1 0% !important;
-  }
+  } }
 }
 
 ._phfc55f {
@@ -66405,10 +66404,10 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 744px), @supports (--custom: properties) {
+@media (min-width: 744px) { @supports (--custom: properties) {
   ._phfc55f {
     flex: 1 1 0% !important;
-  }
+  } }
 }
 
 ._1obz29zo {
