format pages css

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -62826,10 +62826,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1440px) { @supports (--custom: properties) {
-  ._1aolh5ll {
-    flex: 0 0 var(--orbital-panel-width-xl) !important;
-  } }
+@media (min-width: 1440px) {
+  @supports (--custom: properties) {
+    ._1aolh5ll {
+      flex: 0 0 var(--orbital-panel-width-xl) !important;
+    }
+  }
 }
 
 ._15pihn5q {
@@ -63293,10 +63295,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1440px) { @supports (--custom: properties) {
-  ._r61jg4l {
-    flex: 1 1 0% !important;
-  } }
+@media (min-width: 1440px) {
+  @supports (--custom: properties) {
+    ._r61jg4l {
+      flex: 1 1 0% !important;
+    }
+  }
 }
 
 ._bnkeqa {
@@ -63468,10 +63472,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1440px) { @supports (--custom: properties) {
-  ._1mz2k89o {
-    flex: 0 0 var(--orbital-panel-width-xl) !important;
-  } }
+@media (min-width: 1440px) {
+  @supports (--custom: properties) {
+    ._1mz2k89o {
+      flex: 0 0 var(--orbital-panel-width-xl) !important;
+    }
+  }
 }
 
 ._1iegt8e {
@@ -64123,10 +64129,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 744px) { @supports (--custom: properties) {
-  ._1fdiyhjh {
-    flex: 0 0 var(--orbital-panel-width-md) !important;
-  } }
+@media (min-width: 744px) {
+  @supports (--custom: properties) {
+    ._1fdiyhjh {
+      flex: 0 0 var(--orbital-panel-width-md) !important;
+    }
+  }
 }
 
 ._wdec1jj {
@@ -64182,10 +64190,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 744px) { @supports (--custom: properties) {
-  ._wdec1jj {
-    flex: 1 1 0% !important;
-  } }
+@media (min-width: 744px) {
+  @supports (--custom: properties) {
+    ._wdec1jj {
+      flex: 1 1 0% !important;
+    }
+  }
 }
 
 ._50rkbdl {
@@ -64241,10 +64251,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 744px) { @supports (--custom: properties) {
-  ._50rkbdl {
-    flex: 0 0 var(--orbital-panel-width-md) !important;
-  } }
+@media (min-width: 744px) {
+  @supports (--custom: properties) {
+    ._50rkbdl {
+      flex: 0 0 var(--orbital-panel-width-md) !important;
+    }
+  }
 }
 
 ._1ab1ddqs {
@@ -64861,10 +64873,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 744px) { @supports (--custom: properties) {
-  ._x6sr1rm {
-    flex: 0 1 0% !important;
-  } }
+@media (min-width: 744px) {
+  @supports (--custom: properties) {
+    ._x6sr1rm {
+      flex: 0 1 0% !important;
+    }
+  }
 }
 
 ._ijm3lbp {
@@ -64953,10 +64967,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 375px) { @supports (--custom: properties) {
-  ._1xxu4mif {
-    flex: 1 1 0% !important;
-  } }
+@media (min-width: 375px) {
+  @supports (--custom: properties) {
+    ._1xxu4mif {
+      flex: 1 1 0% !important;
+    }
+  }
 }
 
 ._2x3iol {
@@ -65140,10 +65156,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 375px) { @supports (--custom: properties) {
-  ._pm6ka6k {
-    flex: 0 1 0% !important;
-  } }
+@media (min-width: 375px) {
+  @supports (--custom: properties) {
+    ._pm6ka6k {
+      flex: 0 1 0% !important;
+    }
+  }
 }
 
 ._1pusc02v {
@@ -66052,10 +66070,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1128px) { @supports (--custom: properties) {
-  ._kapps0l {
-    flex: 0 0 var(--orbital-panel-width-lg) !important;
-  } }
+@media (min-width: 1128px) {
+  @supports (--custom: properties) {
+    ._kapps0l {
+      flex: 0 0 var(--orbital-panel-width-lg) !important;
+    }
+  }
 }
 
 ._1y2ftwql {
@@ -66129,10 +66149,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1128px) { @supports (--custom: properties) {
-  ._1y2ftwql {
-    flex: 1 1 0% !important;
-  } }
+@media (min-width: 1128px) {
+  @supports (--custom: properties) {
+    ._1y2ftwql {
+      flex: 1 1 0% !important;
+    }
+  }
 }
 
 ._ekd2cho {
@@ -66206,10 +66228,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1128px) { @supports (--custom: properties) {
-  ._ekd2cho {
-    flex: 0 0 var(--orbital-panel-width-lg) !important;
-  } }
+@media (min-width: 1128px) {
+  @supports (--custom: properties) {
+    ._ekd2cho {
+      flex: 0 0 var(--orbital-panel-width-lg) !important;
+    }
+  }
 }
 
 ._1fls1kdh {
@@ -66348,10 +66372,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 1440px) { @supports (--custom: properties) {
-  ._o8ljzwp {
-    flex: 0 1 0% !important;
-  } }
+@media (min-width: 1440px) {
+  @supports (--custom: properties) {
+    ._o8ljzwp {
+      flex: 0 1 0% !important;
+    }
+  }
 }
 
 ._phfc55f {
@@ -66404,10 +66430,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-@media (min-width: 744px) { @supports (--custom: properties) {
-  ._phfc55f {
-    flex: 1 1 0% !important;
-  } }
+@media (min-width: 744px) {
+  @supports (--custom: properties) {
+    ._phfc55f {
+      flex: 1 1 0% !important;
+    }
+  }
 }
 
 ._1obz29zo {
@@ -68601,155 +68629,155 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-right: 8px !important;
 }
 .t1bgcr6e {
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 ._1x6d8808 {
-    position: fixed !important;
-    top: 0px !important;
-    padding-top: env(safe-area-inset-top, 0) !important;
-    box-sizing: content-box !important;
-    z-index: 1 !important;
-    background: rgba(255, 255, 255, 0.95) !important;
-    transition-duration: 0.2s !important;
-    transition-property: -ms-transform, -webkit-transform, transform !important;
-    transition-timing-function: ease-out !important;
-    height: 56px !important;
-    transform: translateY(-100%) !important;
+  position: fixed !important;
+  top: 0px !important;
+  padding-top: env(safe-area-inset-top, 0) !important;
+  box-sizing: content-box !important;
+  z-index: 1 !important;
+  background: rgba(255, 255, 255, 0.95) !important;
+  transition-duration: 0.2s !important;
+  transition-property: -ms-transform, -webkit-transform, transform !important;
+  transition-timing-function: ease-out !important;
+  height: 56px !important;
+  transform: translateY(-100%) !important;
 }
 
 @supports (backdrop-filter: blur(1px)) or (-webkit-backdrop-filter: blur(1px)) {
-    ._1x6d8808 {
-        backdrop-filter: blur(25px) saturate(140%) !important;
-        background: rgba(255, 255, 255, 0.85) !important;
-    }
+  ._1x6d8808 {
+    backdrop-filter: blur(25px) saturate(140%) !important;
+    background: rgba(255, 255, 255, 0.85) !important;
+  }
 }
 
 @media (min-width: 744px) {
-    ._1x6d8808 {
-        height: 64px !important;
-    }
+  ._1x6d8808 {
+    height: 64px !important;
+  }
 }
 
 @media (min-width: 1128px) {
-    ._1x6d8808 {
-        height: 72px !important;
-    }
+  ._1x6d8808 {
+    height: 72px !important;
+  }
 }
 
 @media (max-width: 743px) {
-    ._eie8gyn {
-        -ms-grid-columns: 1fr 1fr !important;
-        display: -ms-grid !important;
-        display: grid !important;
-        grid-row-gap: 2rem !important;
-        grid-column-gap: 1.125rem !important;
-        grid-template-columns: 1fr 1fr !important;
-        -ms-grid-columns: 1fr 1fr !important;
-    }
+  ._eie8gyn {
+    -ms-grid-columns: 1fr 1fr !important;
+    display: -ms-grid !important;
+    display: grid !important;
+    grid-row-gap: 2rem !important;
+    grid-column-gap: 1.125rem !important;
+    grid-template-columns: 1fr 1fr !important;
+    -ms-grid-columns: 1fr 1fr !important;
+  }
 }
 
 .mobileMenu__searchForm {
-    background-color: transparent;
-    border: 1px solid #d0d0d0;
-    height: 48px;
-    border-radius: 2px;
-    color: #222;
-    font-size: 16px;
-    line-height: 1.375;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
-    padding: 0 0 0 52px;
-    width: 100%;
-    -webkit-box-sizing: unset !important;
+  background-color: transparent;
+  border: 1px solid #d0d0d0;
+  height: 48px;
+  border-radius: 2px;
+  color: #222;
+  font-size: 16px;
+  line-height: 1.375;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  padding: 0 0 0 52px;
+  width: 100%;
+  -webkit-box-sizing: unset !important;
 }
 
 .dir.t4tcady[class][class] {
-    margin: var(--kksqe-v) -24px;
+  margin: var(--kksqe-v) -24px;
 }
 
 @media (min-width: 744px) {
-    .dir.t4tcady[class][class] {
-        margin-left: 0;
-        margin-right: 0;
-    }
+  .dir.t4tcady[class][class] {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 .swzp880[class][class] {
-    width: 100%;
-    overflow: auto;
+  width: 100%;
+  overflow: auto;
 }
 
 @media (min-width: 744px) {
-    .swzp880[class][class] {
-        overflow: inherit;
-    }
+  .swzp880[class][class] {
+    overflow: inherit;
+  }
 }
 
 .dir.c1keg1ue[class][class] {
-    padding: 0 24px;
+  padding: 0 24px;
 }
 
 @media (min-width: 744px) {
-    .dir.c1keg1ue[class][class] {
-        padding: 0;
-    }
+  .dir.c1keg1ue[class][class] {
+    padding: 0;
+  }
 }
 
 .c1keg1ue[class][class] {
-    width: 523px;
+  width: 523px;
 }
 
 @media (min-width: 744px) {
-    .c1keg1ue[class][class] {
-        width: auto;
-    }
+  .c1keg1ue[class][class] {
+    width: auto;
+  }
 }
 
 .dir.c1keg1ue[class][class] table {
-    border: 1px solid var(--j-qkgmf);
+  border: 1px solid var(--j-qkgmf);
 }
 
 .c1keg1ue[class][class] table {
-    border-collapse: collapse;
-    width: 100%;
-    table-layout: auto;
+  border-collapse: collapse;
+  width: 100%;
+  table-layout: auto;
 }
 
 .dir.c1keg1ue[class][class] td {
-    border: 1px solid var(--j-qkgmf);
-    padding: var(--jaa-ni-h);
+  border: 1px solid var(--j-qkgmf);
+  padding: var(--jaa-ni-h);
 }
 
 .c1keg1ue[class][class] td {
-    color: var(--f-k-smk-x);
-    font-size: var(--iw-ehf-f);
-    line-height: var(---s-l-myu);
-    font-weight: var(--e-y-j-d-v-j);
+  color: var(--f-k-smk-x);
+  font-size: var(--iw-ehf-f);
+  line-height: var(---s-l-myu);
+  font-weight: var(--e-y-j-d-v-j);
 }
 
 .dir.c1keg1ue[class][class] p {
-    margin: 0;
+  margin: 0;
 }
 
 .dir-ltr.c1keg1ue[class][class] th {
-    text-align: left;
+  text-align: left;
 }
 .dir.c1keg1ue[class][class] th {
-    border: 1px solid var(--j-qkgmf);
-    padding: var(--jaa-ni-h);
+  border: 1px solid var(--j-qkgmf);
+  padding: var(--jaa-ni-h);
 }
 .c1keg1ue[class][class] th {
-    color: var(--f-k-smk-x);
-    font-size: var(--f-cv-j-j-p);
-    line-height: var(--f-l-h-bac);
-    font-weight: var(--h-oqhch);
-    text-transform: uppercase;
+  color: var(--f-k-smk-x);
+  font-size: var(--f-cv-j-j-p);
+  line-height: var(--f-l-h-bac);
+  font-weight: var(--h-oqhch);
+  text-transform: uppercase;
 }
 
 .caoewxn[class][class] {
-    display: flex;
+  display: flex;
 }
 
 @keyframes keyframe_127wuha {
